# Mosh-Python

./: Procfile  db.sqlite3  main.py  pyproject.toml
movies/: admin.py  api.py  models.py  schemas.py  views.py
movies/migrations/: 0001_initial.py  0002_movie_date_created.py
movies/templates/movies/: detail.html  index.html
templates/: base.html
vidly/: .pylintrc  api.py  settings.py  urls.py  views.py
