[project]
name = "vidly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "django-ninja>=1.6.2",
    "gunicorn>=26.0.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.5",
    "django-stubs-ext>=6.0.5",
    "mypy>=2.1.0",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "vidly.settings"
